ボタンを作成

--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -62,6 +62,16 @@
     </div>
   <% end %>
 <% end %>
+<%= form_with url: attendance_path(@current_user.id),
+              method: 'get', local: true, class: 'attend-output' do |f| %>
+  <% if @current_user.owner? %>
+    <div class='output'>
+      <%= button_tag("CSV一括出力", name:'output', class: 'btn btn-success btn-output') %>
+      <input type='hidden' name='select_year' value='<%= @first_month.year.to_i %>'>
+      <input type='hidden' name='select_month' value='<%= @first_month.month.to_i %>'>
+    </div>
+  <% end %>
+<% end %>
 <%# TODO: 一括登録ボタンとかあるといいかも？ %>
 <%= render :partial => 'attendances/sum_table'%>
 <%= render :partial => 'attendances/attendance_table' %>
