--- a/app/views/holidays/_edit_paid_vacation_table.html.erb
+++ b/app/views/holidays/_edit_paid_vacation_table.html.erb
@@ -1,13 +1,13 @@
 <table class='table table-bordered table-striped table-light table-hover table-sm'>
   <thead>
     <tr>
-      <th><%= I18n.t(:table_header, scope: :holiday)[0]%></th>
-      <th><%= I18n.t(:table_header, scope: :holiday)[1]%></th>
-      <th><%= I18n.t(:table_header, scope: :holiday)[2]%></th>
-      <th>申請理由</th>
-      <th><%= I18n.t(:table_header, scope: :holiday)[3]%></th>
-      <th><%= I18n.t(:table_header, scope: :holiday)[4]%></th>
-      <th>認証者コメント</th>
+      <th><%= t('.table_header')[0]%></th>
+      <th><%= t('.table_header')[1]%></th>
+      <th><%= t('.table_header')[2]%></th>
+      <th><%= t('.table_header')[3]%></th>
+      <th><%= t('.table_header')[4]%></th>
+      <th><%= t('.table_header')[5]%></th>
+      <th><%= t('.table_header')[6]%></th>
     </tr>
   </thead>
   <tbody>
@@ -22,8 +22,8 @@
       <th><%= row.name %></th>
       <th><%= row.get_days %></th>
       <th><%= row.applied_reason %></th>
-      <th><%= button_tag I18n.t(:approve, scope: :holiday), name:'approve', class:'btn btn-success' %></th>
-      <th><%= button_tag I18n.t(:dismiss, scope: :holiday), name:'dismiss', class:'btn btn-danger' %></th>
+      <th><%= button_tag t('.approve'), name:'approve', class:'btn btn-success' %></th>
+      <th><%= button_tag t('.dismiss'), name:'dismiss', class:'btn btn-danger' %></th>
     <% end %>
       <th><%= text_field_tag 'owner-comment', row.owner_comment %></th>
     </tr>
