--- a/app/views/holidays/edit.html.erb
+++ b/app/views/holidays/edit.html.erb
@@ -1,2 +1,2 @@
-<h1><%= I18n.t(:apply_for_leave, scope: :screen_name)%></h1>
+<h1><%= t '.title' %></h1>
 <%= render :partial => 'holidays/edit_paid_vacation_table' %>
