--- a/app/views/operation_log/_logs_table_user.html.erb
+++ b/app/views/operation_log/_logs_table_user.html.erb
@@ -1,14 +1,14 @@
 <table class='table table-bordered table-striped table-light table-hover table-sm'>
   <thead>
     <tr>
-      <th>event</th>
-      <th>ログ作成者</th>
-      <th>ログid</th>
-      <th>名前</th>
-      <th>メールアドレス</th>
-      <th>権限</th>
-      <th>残有休数</th>
-      <th>ログ作成日時</th>
+      <th><%= t('.table_header')[0]%></th>
+      <th><%= t('.table_header')[1]%></th>
+      <th><%= t('.table_header')[2]%></th>
+      <th><%= t('.table_header')[3]%></th>
+      <th><%= t('.table_header')[4]%></th>
+      <th><%= t('.table_header')[5]%></th>
+      <th><%= t('.table_header')[6]%></th>
+      <th><%= t('.table_header')[7]%></th>
     </tr>
   </thead>
   <tbody>
