--- a/app/views/attendances/_modal.html.erb
+++ b/app/views/attendances/_modal.html.erb
@@ -2,19 +2,19 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">休暇理由</h5>
+        <h5 class="modal-title"><%= t '.title' %></h5>
         <button type="button" id='closeButton' class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <p>申請理由を記入してください</p>
+        <p><%= t '.description' %></p>
         <%# TODO: 必須入力にするかどうか検討 %>
         <%= text_field :apply, :reason %>
       </div>
       <div class="modal-footer">
-        <button type="button" id='applyButton' class="btn btn-primary">申請</button>
-        <button type="button" id='cancelButton' class="btn btn-secondary" data-dismiss="modal">キャンセル</button>
+        <button type="button" id='applyButton' class="btn btn-primary"><%= t '.to_apply'%></button>
+        <button type="button" id='cancelButton' class="btn btn-secondary" data-dismiss="modal"><%= t '.cancel' %></button>
       </div>
     </div>
   </div>
