--- a/app/views/attendances/_sum_table.html.erb
+++ b/app/views/attendances/_sum_table.html.erb
@@ -1,13 +1,13 @@
 <table class='table table-condensed table-bordered table-sm'>
   <thead class='thead-light'>
     <tr class='text-center'>
-      <th><%= label :page, I18n.t(:sum, scope: :table_header)[0] %></th>
-      <th><%= label :page, I18n.t(:sum, scope: :table_header)[1]%></th>
-      <th><%= label :page, I18n.t(:sum, scope: :table_header)[2]%></th>
-      <th><%= label :page, I18n.t(:sum, scope: :table_header)[3]%></th>
-      <th><%= label :page, I18n.t(:sum, scope: :table_header)[4]%></th>
-      <th><%= label :page, I18n.t(:sum, scope: :table_header)[5]%></th>
-      <th><%= label :page, I18n.t(:sum, scope: :table_header)[6]%></th>
+      <th><%= label :page, t('.table_header')[0] %></th>
+      <th><%= label :page, t('.table_header')[1]%></th>
+      <th><%= label :page, t('.table_header')[2]%></th>
+      <th><%= label :page, t('.table_header')[3]%></th>
+      <th><%= label :page, t('.table_header')[4]%></th>
+      <th><%= label :page, t('.table_header')[5]%></th>
+      <th><%= label :page, t('.table_header')[6]%></th>
     </tr>
   </thead>
   <tbody>
