--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -1,9 +1,9 @@
-<h1><%= I18n.t(:attendance_list, scope: :screen_name)%></h1>
+<h1><%= t('.head')%></h1>
 <div class="search">
   <%# 管理者ならユーザー一覧を表示 %>
   <% if @current_user.owner? %>
     <%= form_with url: attendance_path(@current_user.id), method: :get do |form| %>
-      <div class='search-user'><%= I18n.t(:user, scope: [:activerecord, :models]) %>
+      <div class='search-user'><%= t '.user' %>
         <%= select_tag('select_user',options_for_select(@user_all ,
                                                         class:'opt_user',
                                                         selected: [@selected_user.name, @selected_user.id]),
@@ -22,13 +22,13 @@
                                                       selected: @first_month.year.to_i),
                     :onchange => 'this.form.submit();',
                     class: 'form-control-sm' )%>
-                    <%= I18n.t(:year, scope: [:datetime, :prompts]) %>
+                    <%= t :year, scope: [:datetime, :prompts] %>
       <%= select_tag('select_month', options_for_select((1..12),
                                                         class:'opt_month',
                                                         selected: @first_month.month.to_i),
                     :onchange => 'this.form.submit();',
                     class: 'form-control-sm')%>
-                    <%= I18n.t(:month, scope: [:datetime, :prompts]) %>
+                    <%= t :month, scope: [:datetime, :prompts] %>
     <% end %>
   </div>
 </div>
@@ -36,8 +36,8 @@
   <div class='inputtime'>
     <%= form_with url: attendance_path(@current_user.id),
               method: 'patch', local: true, id: 'save-button', class: 'attend-save' do |f| %>
-      <%= button_tag(I18n.t(:work_status, scope: :attend)[0], name: 'syukkin', class: 'btn btn-success') %>
-      <%= button_tag(I18n.t(:work_end, scope: :attend), name: 'taikin', class: 'btn btn-success')%>
+      <%= button_tag(t('.work_status')[0] , name: 'syukkin', class: 'btn btn-success') %>
+      <%= button_tag(t('.work_end'), name: 'taikin', class: 'btn btn-success')%>
       <input type='hidden' name='select_user' value='<%= @selected_user.id %>' >
       <input type='hidden' name='select_year' value='<%= @first_month.year.to_i %>'>
       <input type='hidden' name='select_month' value='<%= @first_month.month.to_i %>'>
@@ -55,7 +55,7 @@
               method: 'get', local: true, class: 'attend-output' do |f| %>
   <% if @current_user.owner? %>
     <div class='output'>
-      <%= button_tag(I18n.t(:output, scope: :attend), name:'output', class: 'btn btn-success btn-output') %>
+      <%= button_tag(t('.output'), name:'output', class: 'btn btn-success btn-output') %>
       <input type='hidden' name='select_user' value='<%= @selected_user.id %>' >
       <input type='hidden' name='select_year' value='<%= @first_month.year.to_i %>'>
       <input type='hidden' name='select_month' value='<%= @first_month.month.to_i %>'>
@@ -66,7 +66,7 @@
               method: 'get', local: true, class: 'attend-output' do |f| %>
   <% if @current_user.owner? %>
     <div class='output'>
-      <%= button_tag("CSV一括出力", name:'output', class: 'btn btn-success btn-output') %>
+      <%= button_tag(t('.bulk_output'), name:'output', class: 'btn btn-success btn-output') %>
       <input type='hidden' name='select_year' value='<%= @first_month.year.to_i %>'>
       <input type='hidden' name='select_month' value='<%= @first_month.month.to_i %>'>
     </div>
