--- a/app/views/operation_log/_logs_table_vacation.html.erb
+++ b/app/views/operation_log/_logs_table_vacation.html.erb
@@ -1,15 +1,15 @@
 <table class='table table-bordered table-striped table-light table-hover table-sm'>
   <thead>
     <tr>
-      <th>event</th>
-      <th>ログ作成者</th>
-      <th>ログid</th>
-      <th>状態</th>
-      <th>申請者ID</th>
-      <th>申請日</th>
-      <th>申請理由</th>
-      <th>承認コメント</th>
-      <th>ログ作成日時</th>
+      <th><%= t('.table_header')[0]%></th>
+      <th><%= t('.table_header')[1]%></th>
+      <th><%= t('.table_header')[2]%></th>
+      <th><%= t('.table_header')[3]%></th>
+      <th><%= t('.table_header')[4]%></th>
+      <th><%= t('.table_header')[5]%></th>
+      <th><%= t('.table_header')[6]%></th>
+      <th><%= t('.table_header')[7]%></th>
+      <th><%= t('.table_header')[8]%></th>
     </tr>
   </thead>
   <tbody>
@@ -32,7 +32,7 @@
           <th><%= version.created_at %></th>
         </tr>
       <%end%>
-        <th>now</th>
+        <th><%= t '.now' %></th>
         <th></th>
         <th><%= vacation.id %></th>
         <th><%= application_status[vacation.status.to_sym] %></th>
