--- a/app/views/operation_log/index.html.erb
+++ b/app/views/operation_log/index.html.erb
@@ -1,7 +1,7 @@
-<h1>操作ログ</h1>
+<h1><%= t '.header' %></h1>
 <ul class="nav nav-tabs">
-  <div id="nav1" class="nav-item nav-link active" data-toggle="tab">vacation</div>
-  <div id="nav2" class="nav-item nav-link" data-toggle="tab" >user</div>
+  <div id="nav1" class="nav-item nav-link active" data-toggle="tab"><%= t '.tab_vacation' %></div>
+  <div id="nav2" class="nav-item nav-link" data-toggle="tab" ><%= t '.tab_user'%></div>
 </ul>
 <div class="tab-content">
   <div id="tab1" class="tab-pane active" >
