--- a/app/views/user_holiday/show.html.erb
+++ b/app/views/user_holiday/show.html.erb
@@ -1,2 +1,2 @@
-<h1><%= I18n.t(:paid_holiday_confirmation, scope: :screen_name)%></h1>
+<h1><%= t '.title' %></h1>
 <%= render :partial => 'user_holiday/show_paid_vacation_table' %>
