--- a/app/views/user_managements/index.html.erb
+++ b/app/views/user_managements/index.html.erb
@@ -1,5 +1,5 @@
-<h1><%= I18n.t(:user_management, scope: :screen_name)%></h1>
+<h1><%= t '.title' %></h1>
   <%= form_with url: new_user_management_path, method: 'get', local: true do |f| %>
-    <%= button_tag I18n.t(:create, scope: :session), name: 'user_new', class: 'btn btn-info' %>
+    <%= button_tag t('.button'), name: 'user_new', class: 'btn btn-info' %>
   <%end%>
 <%= render :partial => "user_managements/user_management_table"%>
