--- a/app/frontend/src/stylesheets/user_managements.scss
+++ b/app/frontend/src/stylesheets/user_managements.scss
@@ -2,15 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-// .user-name{
-//   height: 100%;
-// }
 .user-management-table{
   margin-top: 10px;
 }
-// .item-id{
-//   width: 20px;
-// }
-// .item-del{
-//   width: 70px;
-// }
+
+.holiday_input {
+  height: 35px;
+}
