--- a/app/views/user_managements/index.html.erb
+++ b/app/views/user_managements/index.html.erb
@@ -5,12 +5,11 @@
       <%= button_tag t('.button'), id: 'new_btn', name: 'user_new', class: 'btn btn-info' %>
     </div>
     <%end%>
-    <div class='col-sm-6'>
-    </div>
+    <div class='col-sm-6'></div>
     <div class='col-sm-4'>
-      <%= form_with url: new_user_management_path, method: 'get',class: 'bulk', local: true do |f| %>
-      <%# TODO:デバック用にマイナス値を入力可 %>
-        <%= f.number_field 'count', name: 'holiday_counter', class: 'holiday_input col-sm-7', min: -10, maxlength: 2, max: 20 %>
+      <%= form_with url: "user_managements/paid/#{@current_user.id}", method: 'patch',class: 'bulk', local: true do |f| %>
+        <%= f.number_field 'count', name: 'holiday_counter',
+              class: 'holiday_input col-sm-7', min: 0, maxlength: 2, max: 20, value: 0 %>
         <%= button_tag '一括入力', id: 'bulk_btn', class: 'btn btn-info col-sm-4'%>
       <%end%>
     </div>
